# Food-recognition-and-leftover-estimation

./: .gitignore  CMakeLists.txt  README.md  detector.cpp  imagePreprocessing.cpp  imagePreprocessing.h
LaTex/: main.tex  template.aux  template.tex
circles/: task
dataset/: food_categories.txt
include/: Tasks.h  circularBoundingBoxes.h  circularBoundingBoxes.hpp  classificator.h  detector.h  drawerAndTester.h  firstSegmentator.h  foodCategories.h  imagePreprocessing.h  matchImage.h  outputCombined.h  performImageSegmentation.h  performanceIndicators.h  prePTester.h  rectangularBoundingBoxes.h  rectangularBoundingBoxes.hpp  secondSegmentator.h  thirdSegmentator.h  uploadImage.h
project-proveAme/circles/: task  task.cpp
project-proveAme/cluster/: task  task.cpp
project-proveAme/cluster colorato/: task.cpp
project-proveAme/clustercolored+watershed/: task
project-proveAme/prova-watershed/: task  task.cpp  taskmsh.cpp
src/: Lab50.cpp  Segmentation.cpp  circularBoundingBoxes.cpp  classificator.cpp  detector.cpp  drawerAndTester.cpp  firstSegmentator.cpp  foodCategories.cpp  imagePreprocessing.cpp  images_vector.cpp  main.cpp  matchImage.cpp  outputCombined.cpp  performImageSegmentation.cpp  performanceIndicators.cpp  prePTester.cpp  rectangularBoundingBoxes.cpp  secondSegmentator.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  thirdSegmentator.cpp  uploadImage.cpp
